fix: wire professor attendance registration flow